@@ -1,3 +1,8 @@
+2006-07-24  Sven Herzberg  <herzi@gnome-de.org>
+
+	* gnome-mouse-properties.c: fix the non-xcursor case for solaris;
+	closes: #319125 (based upon patch from Glynn Foster)
+
 2006-07-23  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-settings-mouse.desktop.in.in:
